# buffalo

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/design/: arch.md
source/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt
test/source/: buffalo_test.cpp
